{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 117,
  "lineage": "3ea32783-15e9-8e37-6f53-182853791c97",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:security-group/sg-0c16499aefd9d5b6f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c16499aefd9d5b6f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-072b9effdccc454ed"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "popupq-cluster-20240930185823306700000003",
            "name_prefix": "popupq-cluster-",
            "owner_id": "361769558926",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "popupq-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:security-group/sg-072b9effdccc454ed",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072b9effdccc454ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c16499aefd9d5b6f"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c16499aefd9d5b6f"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c16499aefd9d5b6f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c16499aefd9d5b6f"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c16499aefd9d5b6f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c16499aefd9d5b6f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "popupq-node-20240930185823308500000004",
            "name_prefix": "popupq-node-",
            "owner_id": "361769558926",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "popupq-node",
              "Terraform": "true",
              "kubernetes.io/cluster/popupq": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-node",
              "Terraform": "true",
              "kubernetes.io/cluster/popupq": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-901955229",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c16499aefd9d5b6f",
            "security_group_rule_id": "sgr-0c60b868858473ad1",
            "self": false,
            "source_security_group_id": "sg-072b9effdccc454ed",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-722796757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-097e9e6899c34109f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1392436139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-0918d6dee52e395df",
            "self": false,
            "source_security_group_id": "sg-0c16499aefd9d5b6f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1917206754",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-0e5a4b88c3295eeef",
            "self": false,
            "source_security_group_id": "sg-0c16499aefd9d5b6f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1157355656",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-08ab8e738414623d2",
            "self": false,
            "source_security_group_id": "sg-0c16499aefd9d5b6f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1470620841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-01ec6e3a32a3d779b",
            "self": false,
            "source_security_group_id": "sg-0c16499aefd9d5b6f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-856086370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-026ac1652a5d6b67a",
            "self": false,
            "source_security_group_id": "sg-0c16499aefd9d5b6f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1787636916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-013f48658500f9628",
            "self": false,
            "source_security_group_id": "sg-0c16499aefd9d5b6f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1891395176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-08aebcd6ed394258a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1391972436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-0b1a289d949e02ee3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-156732483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-072b9effdccc454ed",
            "security_group_rule_id": "sgr-0202a8541305768b8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:network-acl/acl-00878214a16e9650e",
            "default_network_acl_id": "acl-00878214a16e9650e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00878214a16e9650e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "361769558926",
            "subnet_ids": [
              "subnet-02696493e4ecad937",
              "subnet-028f80053e0c6c78d",
              "subnet-02d54335bb0e6f585",
              "subnet-081c82cbb7085fb1d",
              "subnet-083c681de2f7765a9",
              "subnet-0c3338c4ce1be77c1"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "popupq-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:route-table/rtb-021049cece4fe28df",
            "default_route_table_id": "rtb-021049cece4fe28df",
            "id": "rtb-021049cece4fe28df",
            "owner_id": "361769558926",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "popupq-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:security-group/sg-0ec453047220042de",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ec453047220042de",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "361769558926",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "popupq-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0476fabdeb5527d2c",
            "arn": "arn:aws:ec2:eu-north-1:361769558926:elastic-ip/eipalloc-0476fabdeb5527d2c",
            "association_id": "eipassoc-0409ad87a11668909",
            "domain": "vpc",
            "id": "eipalloc-0476fabdeb5527d2c",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-00042b8335d7c8266",
            "private_dns": "ip-10-0-101-241.eu-north-1.compute.internal",
            "private_ip": "10.0.101.241",
            "public_dns": "ec2-51-21-105-120.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.105.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099f5f21f6e407fc0",
            "arn": "arn:aws:ec2:eu-north-1:361769558926:elastic-ip/eipalloc-099f5f21f6e407fc0",
            "association_id": "eipassoc-0735634405d71a577",
            "domain": "vpc",
            "id": "eipalloc-099f5f21f6e407fc0",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0fc15815e56babd6e",
            "private_dns": "ip-10-0-102-87.eu-north-1.compute.internal",
            "private_ip": "10.0.102.87",
            "public_dns": "ec2-13-50-186-239.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.186.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8d221a591935a6f",
            "arn": "arn:aws:ec2:eu-north-1:361769558926:elastic-ip/eipalloc-0f8d221a591935a6f",
            "association_id": "eipassoc-0214642630654a088",
            "domain": "vpc",
            "id": "eipalloc-0f8d221a591935a6f",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-03e403de7e332ef7b",
            "private_dns": "ip-10-0-103-230.eu-north-1.compute.internal",
            "private_ip": "10.0.103.230",
            "public_dns": "ec2-13-49-40-3.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.40.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:internet-gateway/igw-08f14f2c22888aecb",
            "id": "igw-08f14f2c22888aecb",
            "owner_id": "361769558926",
            "tags": {
              "Environment": "dev",
              "Name": "popupq",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0476fabdeb5527d2c",
            "association_id": "eipassoc-0409ad87a11668909",
            "connectivity_type": "public",
            "id": "nat-0663e1d6138ed4a07",
            "network_interface_id": "eni-00042b8335d7c8266",
            "private_ip": "10.0.101.241",
            "public_ip": "51.21.105.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c3338c4ce1be77c1",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099f5f21f6e407fc0",
            "association_id": "eipassoc-0735634405d71a577",
            "connectivity_type": "public",
            "id": "nat-0b5f4e0a1d39beea2",
            "network_interface_id": "eni-0fc15815e56babd6e",
            "private_ip": "10.0.102.87",
            "public_ip": "13.50.186.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d54335bb0e6f585",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8d221a591935a6f",
            "association_id": "eipassoc-0214642630654a088",
            "connectivity_type": "public",
            "id": "nat-0b2c2f1ff2f311270",
            "network_interface_id": "eni-03e403de7e332ef7b",
            "private_ip": "10.0.103.230",
            "public_ip": "13.49.40.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-028f80053e0c6c78d",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-eu-north-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05be6422f7b2101771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0663e1d6138ed4a07",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05be6422f7b210177",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b49ec28d4ffddd861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b5f4e0a1d39beea2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b49ec28d4ffddd86",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08438a27e152f56b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2c2f1ff2f311270",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08438a27e152f56b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08f14f2c22888aecb",
            "id": "r-rtb-0ac347ab44425d9611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac347ab44425d961",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:route-table/rtb-05be6422f7b210177",
            "id": "rtb-05be6422f7b210177",
            "owner_id": "361769558926",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0663e1d6138ed4a07",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:route-table/rtb-0b49ec28d4ffddd86",
            "id": "rtb-0b49ec28d4ffddd86",
            "owner_id": "361769558926",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5f4e0a1d39beea2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:route-table/rtb-08438a27e152f56b7",
            "id": "rtb-08438a27e152f56b7",
            "owner_id": "361769558926",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2c2f1ff2f311270",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:route-table/rtb-0ac347ab44425d961",
            "id": "rtb-0ac347ab44425d961",
            "owner_id": "361769558926",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f14f2c22888aecb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "popupq-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c6a1d42a28f29cd",
            "route_table_id": "rtb-05be6422f7b210177",
            "subnet_id": "subnet-081c82cbb7085fb1d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05789db77bd729cbf",
            "route_table_id": "rtb-0b49ec28d4ffddd86",
            "subnet_id": "subnet-02696493e4ecad937"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f579c5e457788eb",
            "route_table_id": "rtb-08438a27e152f56b7",
            "subnet_id": "subnet-083c681de2f7765a9"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0035b1df69d53e1fb",
            "route_table_id": "rtb-0ac347ab44425d961",
            "subnet_id": "subnet-0c3338c4ce1be77c1"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac9b47edb8ddd13",
            "route_table_id": "rtb-0ac347ab44425d961",
            "subnet_id": "subnet-02d54335bb0e6f585"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c483d055a9be8d29",
            "route_table_id": "rtb-0ac347ab44425d961",
            "subnet_id": "subnet-028f80053e0c6c78d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:subnet/subnet-081c82cbb7085fb1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081c82cbb7085fb1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769558926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:subnet/subnet-02696493e4ecad937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02696493e4ecad937",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769558926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:subnet/subnet-083c681de2f7765a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083c681de2f7765a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769558926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-private-eu-north-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:subnet/subnet-0c3338c4ce1be77c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3338c4ce1be77c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769558926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-public-eu-north-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-public-eu-north-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:subnet/subnet-02d54335bb0e6f585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d54335bb0e6f585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769558926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-public-eu-north-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-public-eu-north-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:subnet/subnet-028f80053e0c6c78d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f80053e0c6c78d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361769558926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "popupq-public-eu-north-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq-public-eu-north-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0df2e504019800b3c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:361769558926:vpc/vpc-0df2e504019800b3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00878214a16e9650e",
            "default_route_table_id": "rtb-021049cece4fe28df",
            "default_security_group_id": "sg-0ec453047220042de",
            "dhcp_options_id": "dopt-0a775c4f709423c90",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df2e504019800b3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021049cece4fe28df",
            "owner_id": "361769558926",
            "tags": {
              "Environment": "dev",
              "Name": "popupq",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "popupq",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}